Fix closing tag mismatch

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ WARRANTIES OF MERCHANTIBILITY AND FITNESS FOR A PARTICULAR PURPOSE.</pre>
 			<li>A computer with a graphic card, even a dummy one</li>
 			<li>A graphical window manager. Sorry console addicts, this game is not CLI and do not use ncurse or libcaca for rendering...</li>
 			<li>Libraries development headers like <span class="monospaced">freeglut3-dev</span>, <span class="monospaced">libpng12-dev</span> (maybe a bunch of other as well, but I do not depend on them directly)</li>
-			<li>Compilation tools like <span class="monospaced">make</span>, <span class="monospaced">build-essential</pre></li>
+			<li>Compilation tools like <span class="monospaced">make</span>, <span class="monospaced">build-essential</span></li>
 			<li>Some programming and compilation skills and time, if compilation is problematic</li>
 		</ul>
 
