Update dependencies. Link to INSTALL.textile file

--- a/index.html
+++ b/index.html
@@ -168,13 +168,16 @@ WARRANTIES OF MERCHANTIBILITY AND FITNESS FOR A PARTICULAR PURPOSE.</pre>
 		Breach is a Linux OpenGL software under new BSD licence.<br/>
 		It's entirely written in C++ and uses a single makefile to build, test, run, and generate documentation.
 		</p>
+		<p>
+		You may want to take a look at the <a href="https://github.com/ofavre/Breach/blob/master/INSTALL.textile"><span class="monospaced">INSTALL.textile</span></a> file in the project root.
+		</p>
 
 		<h2><a id="requirements">Requirements</a></h2>
 		<ul>
 			<li>A computer with a graphic card, even a dummy one</li>
 			<li>A graphical window manager. Sorry console addicts, this game is not CLI and do not use ncurse or libcaca for rendering...</li>
-			<li>Libraries development headers like <span class="monospaced">freeglut3-dev</span>, <span class="monospaced">libpng12-dev</span> (maybe a bunch of other as well, but I do not depend on them directly)</li>
-			<li>Compilation tools like <span class="monospaced">make</span>, <span class="monospaced">build-essential</span></li>
+			<li>Libraries development headers like <span class="monospaced">freeglut3-dev</span>, <span class="monospaced">libpng12-dev</span>, <span class="monospaced">libsigc++-2.0-dev</span> (maybe a bunch of other as well, but I do not depend on them directly)</li>
+			<li>Compilation tools like those given by <span class="monospaced">build-essential</span></li>
 			<li>Some programming and compilation skills and time, if compilation is problematic</li>
 		</ul>
 
